Color code changes
Color code changes

--- a/FaceTek/My Team/MyTeamtblCell.xib
+++ b/FaceTek/My Team/MyTeamtblCell.xib
@@ -24,6 +24,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="leave_user.png" translatesAutoresizingMaskIntoConstraints="NO" id="ofI-Pp-wyI">
                                 <rect key="frame" x="26" y="13" width="35" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.60392156862745094" green="0.80392156862745101" blue="0.19607843137254902" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
