--- a/FaceTek/Timesheet/timesheettblcell.xib
+++ b/FaceTek/Timesheet/timesheettblcell.xib
@@ -30,21 +30,21 @@
                                 <color key="textColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.10196078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CYU-CN-ydW">
-                                <rect key="frame" x="402" y="30.5" width="20" height="19"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Timesheetclock.png" translatesAutoresizingMaskIntoConstraints="NO" id="CYU-CN-ydW">
+                                <rect key="frame" x="385" y="32" width="16" height="16"/>
                                 <color key="tintColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="cSP-k7-Ojt"/>
-                                    <constraint firstAttribute="height" constant="20" id="m5O-qK-Jci"/>
+                                    <constraint firstAttribute="width" constant="16" id="cSP-k7-Ojt"/>
+                                    <constraint firstAttribute="height" constant="16" id="m5O-qK-Jci"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="CYU-CN-ydW" secondAttribute="trailing" constant="8" id="3gs-MG-bwJ"/>
+                            <constraint firstAttribute="trailing" secondItem="CYU-CN-ydW" secondAttribute="trailing" constant="29" id="3gs-MG-bwJ"/>
                             <constraint firstItem="9Mu-Ml-OxM" firstAttribute="leading" secondItem="lZn-Ic-Px0" secondAttribute="leading" constant="10" id="PE7-09-PRa"/>
                             <constraint firstItem="9Mu-Ml-OxM" firstAttribute="top" secondItem="lZn-Ic-Px0" secondAttribute="top" constant="5" id="SNW-1d-XCq"/>
-                            <constraint firstItem="CYU-CN-ydW" firstAttribute="top" secondItem="lZn-Ic-Px0" secondAttribute="top" constant="30" id="YHo-dl-Lca"/>
+                            <constraint firstItem="CYU-CN-ydW" firstAttribute="top" secondItem="lZn-Ic-Px0" secondAttribute="top" constant="32" id="YHo-dl-Lca"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -64,6 +64,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="clock" catalog="system" width="128" height="121"/>
+        <image name="Timesheetclock.png" width="22" height="22"/>
     </resources>
 </document>
