--- a/FaceTek/Leave/LeaveNavigationcell.xib
+++ b/FaceTek/Leave/LeaveNavigationcell.xib
@@ -10,32 +10,69 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LeaveNavigationcell" id="KGk-i7-Jjw" customClass="LeaveNavigationcell" customModule="Facetek" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LeaveNavigationcell" rowHeight="75" id="KGk-i7-Jjw" customClass="LeaveNavigationcell" customModule="Facetek" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="500" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="500" height="40"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xWw-Et-afK">
-                        <rect key="frame" x="9" y="7" width="290" height="30"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M96-5g-c81">
+                        <rect key="frame" x="0.0" y="0.0" width="500" height="40"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yD-rX-Oeo">
+                                <rect key="frame" x="40" y="2.5" width="356" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="CaF-UE-k8c"/>
+                                    <constraint firstAttribute="width" constant="356" id="Jsj-eA-mkb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AuZ-xR-Qn4">
+                                <rect key="frame" x="0.0" y="39" width="500" height="0.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="gAh-J5-aEw"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Navcalendar.png" translatesAutoresizingMaskIntoConstraints="NO" id="BUc-my-baW">
+                                <rect key="frame" x="10" y="10" width="16" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="6nP-QX-2uG"/>
+                                    <constraint firstAttribute="width" constant="16" id="Aat-OO-vpq"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BUc-my-baW" firstAttribute="leading" secondItem="M96-5g-c81" secondAttribute="leading" constant="10" id="591-3Y-lJh"/>
+                            <constraint firstItem="2yD-rX-Oeo" firstAttribute="leading" secondItem="BUc-my-baW" secondAttribute="trailing" constant="14" id="C5v-sx-KTv"/>
+                            <constraint firstItem="AuZ-xR-Qn4" firstAttribute="leading" secondItem="M96-5g-c81" secondAttribute="leading" id="DF5-O1-Spy"/>
+                            <constraint firstItem="BUc-my-baW" firstAttribute="top" secondItem="M96-5g-c81" secondAttribute="top" constant="10" id="bqy-2d-ZhI"/>
+                            <constraint firstItem="2yD-rX-Oeo" firstAttribute="top" secondItem="M96-5g-c81" secondAttribute="top" constant="2.5" id="dzE-Yt-kD1"/>
+                            <constraint firstAttribute="trailing" secondItem="AuZ-xR-Qn4" secondAttribute="trailing" id="f0G-g9-vD6"/>
+                            <constraint firstAttribute="bottom" secondItem="AuZ-xR-Qn4" secondAttribute="bottom" constant="0.5" id="fwp-YZ-aji"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="xWw-Et-afK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="FmO-qb-Hqa"/>
-                    <constraint firstItem="xWw-Et-afK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="MXE-6j-TqO"/>
-                    <constraint firstAttribute="trailing" secondItem="xWw-Et-afK" secondAttribute="trailing" constant="21" id="iyI-2U-rsz"/>
-                    <constraint firstAttribute="bottom" secondItem="xWw-Et-afK" secondAttribute="bottom" constant="7" id="pJ6-ww-Q7Z"/>
+                    <constraint firstAttribute="trailing" secondItem="M96-5g-c81" secondAttribute="trailing" id="4Gw-Z4-1CO"/>
+                    <constraint firstItem="M96-5g-c81" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8u8-xP-5oH"/>
+                    <constraint firstAttribute="bottom" secondItem="M96-5g-c81" secondAttribute="bottom" id="Uk7-D6-gHP"/>
+                    <constraint firstItem="M96-5g-c81" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="YcO-I9-Lud"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="LeaveNavigationLbl" destination="xWw-Et-afK" id="P4L-uz-4Nk"/>
+                <outlet property="LeaveNavigationLbl" destination="2yD-rX-Oeo" id="K3R-MY-iBd"/>
+                <outlet property="LeaveNavigationimg" destination="BUc-my-baW" id="zdK-qu-vQ3"/>
             </connections>
-            <point key="canvasLocation" x="-363" y="37"/>
+            <point key="canvasLocation" x="-219.19999999999999" y="50.374812593703155"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Navcalendar.png" width="512" height="512"/>
+    </resources>
 </document>
