working on scrollview
working on scrollview

--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -5401,6 +5401,7 @@
                             <constraint firstItem="FQZ-Jp-sXC" firstAttribute="trailing" secondItem="uv5-Nz-0NI" secondAttribute="trailing" id="4ds-pg-Cmb"/>
                             <constraint firstItem="FQZ-Jp-sXC" firstAttribute="leading" secondItem="uv5-Nz-0NI" secondAttribute="leading" id="Eus-lr-U9F"/>
                             <constraint firstItem="3dr-8k-IRt" firstAttribute="top" secondItem="wm4-gl-DSf" secondAttribute="bottom" id="Mie-Yx-r4D"/>
+                            <constraint firstItem="bdp-rb-A2A" firstAttribute="height" secondItem="z1x-DU-xLW" secondAttribute="height" multiplier="0.929535" id="SQ2-e3-W39"/>
                             <constraint firstItem="FQZ-Jp-sXC" firstAttribute="bottom" secondItem="uv5-Nz-0NI" secondAttribute="bottom" id="UKH-ho-MSC"/>
                             <constraint firstItem="wm4-gl-DSf" firstAttribute="leading" secondItem="uv5-Nz-0NI" secondAttribute="leading" id="Wl6-LH-Yr5"/>
                             <constraint firstItem="wm4-gl-DSf" firstAttribute="trailing" secondItem="uv5-Nz-0NI" secondAttribute="trailing" id="YZe-kA-rUv"/>
