--- a/FaceTek/Timesheet/timesheettblcell.xib
+++ b/FaceTek/Timesheet/timesheettblcell.xib
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="timesheettblcell" rowHeight="81" id="KGk-i7-Jjw" customClass="timesheettblcell" customModule="Facetek" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="430" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="430" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="430" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="430" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lZn-Ic-Px0">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="80"/>
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lZn-Ic-Px0">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="55"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Mu-Ml-OxM">
-                                <rect key="frame" x="10" y="5" width="275" height="70"/>
+                                <rect key="frame" x="10" y="5" width="275" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="Elj-aG-aF8"/>
+                                    <constraint firstAttribute="height" constant="50" id="Elj-aG-aF8"/>
                                     <constraint firstAttribute="width" constant="275" id="q2T-7j-7Ib"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -31,8 +32,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Timesheetclock.png" translatesAutoresizingMaskIntoConstraints="NO" id="CYU-CN-ydW">
-                                <rect key="frame" x="390" y="32" width="16" height="16"/>
-                                <color key="tintColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="390" y="22" width="16" height="16"/>
+                                <color key="tintColor" systemColor="systemBlueColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="16" id="cSP-k7-Ojt"/>
                                     <constraint firstAttribute="height" constant="16" id="m5O-qK-Jci"/>
@@ -44,7 +45,7 @@
                             <constraint firstAttribute="trailing" secondItem="CYU-CN-ydW" secondAttribute="trailing" constant="24" id="3gs-MG-bwJ"/>
                             <constraint firstItem="9Mu-Ml-OxM" firstAttribute="leading" secondItem="lZn-Ic-Px0" secondAttribute="leading" constant="10" id="PE7-09-PRa"/>
                             <constraint firstItem="9Mu-Ml-OxM" firstAttribute="top" secondItem="lZn-Ic-Px0" secondAttribute="top" constant="5" id="SNW-1d-XCq"/>
-                            <constraint firstItem="CYU-CN-ydW" firstAttribute="top" secondItem="lZn-Ic-Px0" secondAttribute="top" constant="32" id="YHo-dl-Lca"/>
+                            <constraint firstItem="CYU-CN-ydW" firstAttribute="top" secondItem="lZn-Ic-Px0" secondAttribute="top" constant="22" id="YHo-dl-Lca"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -65,5 +66,8 @@
     </objects>
     <resources>
         <image name="Timesheetclock.png" width="22" height="22"/>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
